--- a/scss/style.scss
+++ b/scss/style.scss
@@ -152,7 +152,7 @@ $scene-height: 400px;
                         }
                     }
                     p {
-                        max-width: 65%;
+                        max-width: 70%;
                         text-align: center;
                     }
                 }
@@ -215,14 +215,30 @@ $scene-height: 400px;
 @media(max-width:"480px"){
     .scene{
         width: 100%;
+        & .label__item{
+            font-size: 12px;
+        }
         & .left-zone{
             width: 40%;
             &  .list .item .label__img{
-                margin-top: 10px;
-                width: 25px;
-                height: 25px;
+                margin: auto 0 auto 10px;
+                width: 15px;
+                height: 15px;
             }
         }
+        & .content {
+            &__img {
+                width: 100px;
+                height: 100px;
+        }
+        & h2 {
+            font-size: 15px!important;
+        }
+        & p{
+            max-width: 80%!important;
+            font-size: 12px!important;
+        }
+    }
     }
 }
 @import "node_modules/bootstrap/scss/bootstrap";
