New Files Struture

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /*
 Theme Name: Tintas Revestir
-Author: Nícolas Medeiros Thiesen
 Theme URI: https://github.com/NicolasThiesen/Revestir_WP_Theme
+Author: Nícolas Medeiros Thiesen
+Author URI: http://wordpress.org/
 Description: Tema para o site da Rvestir Tintas e Texturas LTDA.
 Version: 0.5
 Text Domain: rev
