--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Tintas Revestir
 Theme URI: https://github.com/NicolasThiesen/Revestir_WP_Theme
 Author: Nícolas Medeiros Thiesen
-Author URI: http://wordpress.org/
+Author URI: https://github.com/NicolasThiesen
 Description: Tema para o site da Rvestir Tintas e Texturas LTDA.
 Version: 0.5
 Text Domain: rev
